CC-3270 :fix date format issue
This commit will
*resolve PR:[CC-3270](https://companieshouse.atlassian.net/browse/CC-3270)